--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
 	<head>
 		<title>Result</title>
+		<script type="text/javascript">
+			function showAlert() {
+				alert("Welcome to the Sandwich Page!");
+			}
+		</script>
 	</head>
-	<body><h1>YEAH SANDWICHES</h1>
-	<img src="http://bit.ly/RhrMEn" />
+	<body>
+		<h1>YEAH SANDWICHES</h1>
+		<img src="http://bit.ly/RhrMEn" />
 		<p>I like eggs.</p>
 		<p>And ham!</p>
 		<p>But mostly sandwiches.</p>
+		<button onclick="showAlert()">Click me for a surprise!</button>
 	</body>
 </html>
