--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Result</title>
-		<script type="text/javascript">
-			function showAlert() {
-				alert("Welcome to the Sandwich Page!");
-			}
-		</script>
-	</head>
-	<body>
-		<h1>YEAH SANDWICHES</h1>
-		<img src="http://bit.ly/RhrMEn" />
-		<p>I like eggs.</p>
-		<p>And ham!</p>
-		<p>But mostly sandwiches.</p>
-		<button onclick="showAlert()">Click me for a surprise!</button>
-	</body>
+<head>
+    <title>웹 챗봇</title>
+</head>
+<body>
+    <input type="text" id="message" placeholder="메시지 입력">
+    <button onclick="sendMessage()">전송</button>
+
+    <div id="response"></div>
+
+    <script>
+        const apiUrl = 'https://api-gw.example.com/chatbot';
+
+        function sendMessage() {
+            const message = document.getElementById('message').value;
+            const xhr = new XMLHttpRequest();
+
+            xhr.open('POST', apiUrl, true);
+            xhr.setRequestHeader('Content-Type', 'application/json');
+            xhr.onload = function() {
+                if (xhr.status === 200) {
+                    const response = JSON.parse(xhr.responseText);
+                    document.getElementById('response').innerText = response.message;
+                } else {
+                    console.error('API 호출 실패');
+                }
+            };
+            xhr.send(JSON.stringify({ message }));
+        }
+    </script>
+</body>
 </html>
