--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="response"></div>
 
     <script>
-        const apiUrl = 'https://api-gw.example.com/chatbot';
+        const apiUrl = 'https://47t428y9ud.apigw.ntruss.com/SyworksTestChatbot/SyworksTestChatbot/'; // 챗봇 url
 
         function sendMessage() {
             const message = document.getElementById('message').value;
