--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
-        const apiUrl = 'https://api-gw.example.com/chatbot';
+        const apiUrl = 'https://1qpvyr49g5.apigw.ntruss.com/custom/v1/15086/ee048475e5339ab539f9bc93c785ae96a30d87ffb0863b153bd9fef764b81c2d';
 
         function sendMessage() {
             const message = document.getElementById('message').value;
