--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>웹 챗봇</title>
+    <title>INDEX</title>
 </head>
 <body>
     <input type="text" id="message" placeholder="메시지 입력">
