--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <div id="response"></div>
     <script>
+        const axios = require('axios');
         const apiUrl = 'https://1qpvyr49g5.apigw.ntruss.com/custom/v1/15086/ee048475e5339ab539f9bc93c785ae96a30d87ffb0863b153bd9fef764b81c2d';
 
         function sendMessage() {
